# gb-debug

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  state.txt
roms/games/: PokemonGold.gbsave  PokemonRed.gbsave  PokemonRed.sav
src/: audio.rs  cartridge.rs  disassembler.rs  gbmode.rs  main.rs
src/assembler/: lexer.rs  mod.rs  parser.rs
src/cartridge/: licensee.rs  mod.rs
src/cpu/: instruction.rs  mod.rs  register.rs
src/io/: joypad.rs  mod.rs  sound.rs
src/mbc/: mbc0.rs  mbc1.rs  mbc3.rs  mod.rs
src/mmu/: mod.rs  timer.rs
src/ppu/: mod.rs
src/ui/: context.rs  mod.rs  state.rs  tree_behaviour.rs
src/ui/elements/: mod.rs
src/ui/windows/: breakpoints.rs  disassembly.rs  game_window.rs  memory_dump.rs  memory_view.rs  mod.rs  registers.rs  tile_map_viewer.rs
