[package]
name = "gb-debug"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
egui = "0.29"
eframe = "0.29"
egui_tiles = "0.10"
catppuccin-egui = { version = "5.3.1", default-features = false, features = ["egui29"] }
native-dialog = "0.7"

env_logger = "0.11"
log = "0.4"